# bevy_walky

./: .gitignore  .nvim.lua  1.blend  Cargo.toml  README.md  bevy_walky-214386ac9089cbbd.js  bevy_walky-513b923ed2dc795b.js  bevy_walky-5b253ad7e22bbc07.js  bevy_walky-b3faf052b4a57a2a.js  bevy_walky-da47a5c76cdd6076.js  bevy_walky-e6b102e16fb36696.js  flake.nix  index.html  notes.md  walky_objs.blend
.cargo/: config.toml
.github/workflows/: deploy-page.yaml
assets/: degauss.glb  walky_objs.glb
credits/: CREDITS.md
src/: main.rs
src/components/: camera.rs  mod.rs
src/components/player/: animation.rs  mod.rs  physics.rs  sensors.rs
src/systems/player/: animation.rs  control.rs  mod.rs  physics.rs  sensors.rs  spawn.rs
src/systems/world/: camera.rs  mod.rs  physics_fixup.rs  scene.rs
