[package]
name = "bevy_walky"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = { version = "0.12", features = [] }
bevy_rapier3d = { version = "0.23", features = ["debug-render"] }
bevy-inspector-egui = { version = "0.22.1", features = ["bevy_pbr"] }
smooth-bevy-cameras = "0.10.0"
